--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ color:white;
 
              sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation "  
 
-                width="100%" height="900" scrolling="no" src="
+                width="100%" height="100%" scrolling="no" src="
 
           
 
@@ -172,25 +172,3 @@ color:white;
    <br>
 
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : '9bd57a18091ed351bd91e9f4f8963aeb',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/9bd57a18091ed351bd91e9f4f8963aeb/invoke.js"></scr' + 'ipt>');
-</script>
-
-	      
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'a23b954c8ab6359f64e7edba971cb823',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/a23b954c8ab6359f64e7edba971cb823/invoke.js"></scr' + 'ipt>');
-</script>	    
