--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ color:white;
 
              sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation "  
 
-                width="100%" height="100%" scrolling="no" src="
+                width="100%" height="450px" scrolling="yes" src="
 
           
 
