--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 
-
+<meta name="monetag" content="2975bc5462987a33e19c68831e2db587">
    
   </a>
 </div>
@@ -153,7 +153,7 @@ color:white;
 
 <br>
 
-		
+<script id="_waurgg">var _wau = _wau || []; _wau.push(["dynamic", "3ny6zuhbgp", "rgg", "bedb1effffff", "small"]);</script><script async src="//waust.at/d.js"></script>		
     
 
 <footer>
