--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Agenda Deportiva</title>
 
-
+<link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/jm1JR8F/198-sin-t-tulo.png">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
