--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
     <!DOCTYPE html><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Futbol Libre HD - Mira el Fútbol y Canales Deportivos Online</title>
+ 
 
 <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/jm1JR8F/198-sin-t-tulo.png">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
 
+<title>Fútbol Online TV: Disfruta del Mejor Fútbol FULL HD</title>
+	<meta name="keywords" content="Fútbol Online en vivo gratis y en HD. Transmisiones de las mejores ligas y torneos del mundo. No te pierdas ningun partido con Fútbol Libre.">
+	<link rel="canonical" href="https://futbolonlinetv.pe/">
+	<meta content="INDEX, FOLLOW" name="ROBOTS">
+	<meta name="robots" content="index, follow">
+<meta name="description" content="Fútbol Online en vivo gratis y en HD. Transmisiones de las mejores ligas y torneos del mundo. No te pierdas ningun partido con Fútbol Libre.">
+	<meta property="og:locale" content="es">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Fútbol Online - Transmisión en Vivo Gratis y en HD">
+	<meta property="og:description" content="Fútbol Online en vivo gratis y en HD. Transmisiones de las mejores ligas y torneos del mundo. No te pierdas ningun partido con Fútbol Libre.">
+	<meta property="og:url" content="https://futbolonlinetv.com/">
+	<meta property="og:site_name" content="Fútbol Online - Transmisión en Vivo Gratis y en HD">
+	<meta name="twitter:card" content="summary">
+	<meta property="og:image" content="https://i.ibb.co/jm1JR8F/198-sin-t-tulo.png">
+	<meta name="twitter:description" content="Fútbol Online en vivo gratis y en HD. Transmisiones de las mejores ligas y torneos del mundo. No te pierdas ningun partido con Fútbol Libre.">
+	<meta name="twitter:title" content="Fútbol Online - Transmisión en Vivo Gratis y en HD">
+
 
 <body style="background-color:black;">
  
  
-<title>Agenda</title> 
+ 
 
 
 
