--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
 
+
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-L00QM3H14H"></script>
+		<script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-L00QM3H14H'); </script>
+
+		
 <title>Fútbol Online TV: Disfruta del Mejor Fútbol FULL HD</title>
 	<meta name="keywords" content="Fútbol Online en vivo gratis y en HD. Transmisiones de las mejores ligas y torneos del mundo. No te pierdas ningun partido con Fútbol Libre.">
 	<link rel="canonical" href="https://futbolonlinetv.pe/">
