--- a/index.html
+++ b/index.html
@@ -216,7 +216,16 @@
 
     </header>
 
-    
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '27fa3134ef3b1b4637c9cc8463180979',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fortunatelychastise.com/27fa3134ef3b1b4637c9cc8463180979/invoke.js"></script>
 
     <div class="video-container">
 
