--- a/index.html
+++ b/index.html
@@ -227,16 +227,8 @@
     </header>
 
 
+<!-- aquí banner -->
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : '9bd57a18091ed351bd91e9f4f8963aeb',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
 <script type="text/javascript" src="//fortunatelychastise.com/9bd57a18091ed351bd91e9f4f8963aeb/invoke.js"></script>
 
 	
