--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
     </script>
 
 
-<script
-  type="text/javascript"
-  src="https://fortunatelychastise.com/d5/35/84/d53584a5f410a892b0c389ae6cd2b7f6.js"
-></script>
+<!-- aqui popunder -->
 
 
 
@@ -229,7 +226,6 @@
 
 <!-- aquí banner -->
 
-<script type="text/javascript" src="//fortunatelychastise.com/9bd57a18091ed351bd91e9f4f8963aeb/invoke.js"></script>
 
 	
     <div class="video-container">
