--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <html lang="es">
 
 <head>
-<script>(function(s){s.dataset.zone='9446035',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+
+
+<script src="https://quge5.com/88/tag.min.js" data-zone="205329" async data-cfasync="false"></script>
+
+
+
+
 	
-	<script>(function(s){s.dataset.zone='10449817',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 	<meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
