--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
 
             loading="lazy"
 
-            src="https://panel.donromans.com/"
+            src="https://panel.donromans.com/glz"
 
             sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"  
-
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; "
             allow="encrypted-media" 
 
             frameborder="0" 
